esphome/manifests/esphome-build-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: esphome

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome-build
  namespace: esphome
  labels:
    app: esphome-build
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: esphome-build
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: esphome-build
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-prod-15
      containers:
      - name: esphome
        image: esphome/esphome:2026.9.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "8000m"
            memory: "12Gi"
        volumeMounts:
        - name: esphome-config
          mountPath: /config
        ports:
        - name: http
          containerPort: 6052
        - name: device-builder
          containerPort: 6055
        readinessProbe:
          httpGet:
            path: /
            port: 6052
        livenessProbe:
          httpGet:
            path: /
            port: 6052
      volumes:
      - name: esphome-config
        hostPath:
          path: "/mnt/k3s-prod-data/esphome-build"

---
apiVersion: v1
kind: Service
metadata:
  name: esphome-build
  namespace: esphome
spec:
  selector:
    app: esphome-build
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 6052
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: esphome-build-device-builder
  namespace: esphome
spec:
  selector:
    app: esphome-build
  type: ClusterIP
  ports:
  - name: device-builder
    port: 6055
    targetPort: 6055
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome-build-ingress
  namespace: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`esphome-build-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: esphome-build
          port: 80
