esphome/manifests/esphome-deployment-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: esphome

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: esphome
  labels:
    app: esphome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: esphome
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "8000m"
            memory: "8Gi"
        volumeMounts:
        - name: esphome-config
          mountPath: /config
        ports:
        - name: http
          containerPort: 6052
        readinessProbe:
          httpGet:
            path: /
            port: 6052
        livenessProbe:
          httpGet:
            path: /
            port: 6052
      volumes:
      - name: esphome-config
        hostPath:
          path: "/mnt/k3s-prod-data/esphome"

---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
spec:
  selector:
    app: esphome
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 6052
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome-ingress
  namespace: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`esphome-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: esphome
          port: 80
